Created Pos (PINcode) UI

--- a/BitoDesktop.WPF/Controllers/Login/LoginController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/LoginController.xaml
@@ -45,6 +45,7 @@
                 Text="Kirish" />
             <TextBox
                 x:Name="ServerNameTxt"
+                md:ElevationAssist.Elevation="Dp16"
                 md:HintAssist.Hint="Server Nomi"
                 BorderThickness="0" />
             <TextBox
