--- a/BitoDesktop.WPF/Controllers/Login/DeviceChooserController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/DeviceChooserController.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BitoDesktop.WPF.Controllers.Login"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Width="360"
     Height="450"
     mc:Ignorable="d">
