--- a/BitoDesktop.WPF/MainWindow.xaml
+++ b/BitoDesktop.WPF/MainWindow.xaml
@@ -5,9 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BitoDesktop.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="MainWindow"
-    MinWidth="800"
-    MinHeight="450"
+    MinWidth="1024"
+    MinHeight="768"
     Background="#EAEEF1"
     WindowState="Maximized"
     mc:Ignorable="d">
