--- a/BitoDesktop.WPF/Controllers/Login/PinCodeController.xaml
+++ b/BitoDesktop.WPF/Controllers/Login/PinCodeController.xaml
@@ -10,13 +10,14 @@
     Height="446"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <Style BasedOn="{StaticResource MaterialDesignOutlinedButton}" TargetType="Button">
+        <Style BasedOn="{StaticResource MaterialDesignRaisedButton}" TargetType="Button">
             <Setter Property="Background" Value="White" />
             <Setter Property="Foreground" Value="Black" />
             <Setter Property="Height" Value="60" />
             <Setter Property="Width" Value="100" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="md:ButtonAssist.CornerRadius" Value="10" />
+            <Setter Property="md:ShadowAssist.ShadowDepth" Value="Depth1" />
             <Setter Property="Margin" Value="0,7" />
         </Style>
     </UserControl.Resources>
@@ -50,94 +51,54 @@
                 <Button
                     HorizontalAlignment="Right"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="1">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="1" />
                 <Button
                     Grid.Column="1"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="2">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="2" />
                 <Button
                     Grid.Column="2"
                     HorizontalAlignment="Left"
                     md:ElevationAssist.Elevation="Dp16"
                     md:ShadowAssist.ShadowEdges="All"
-                    Content="3">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="3" />
                 <Button
                     Grid.Row="1"
                     HorizontalAlignment="Right"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="4">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="4" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="1"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="5">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="5" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="2"
                     HorizontalAlignment="Left"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="6">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="6" />
                 <Button
                     Grid.Row="2"
                     HorizontalAlignment="Right"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="7">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="7" />
                 <Button
                     Grid.Row="2"
                     Grid.Column="1"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="8">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="8" />
                 <Button
                     Grid.Row="2"
                     Grid.Column="2"
                     HorizontalAlignment="Left"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="9">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="9" />
                 <Button
                     Grid.Row="3"
                     Grid.Column="1"
                     md:ElevationAssist.Elevation="Dp16"
-                    Content="0">
-                    <Button.Effect>
-                        <DropShadowEffect Direction="315" Opacity="0.185" />
-                    </Button.Effect>
-                </Button>
+                    Content="0" />
             </Grid>
         </StackPanel>
     </Border>
