--- a/BitoDesktop.WPF/Pages/PosPage.xaml
+++ b/BitoDesktop.WPF/Pages/PosPage.xaml
@@ -19,13 +19,327 @@
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="64" />
             <ColumnDefinition Width="1.5*" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Frame NavigationUIVisibility="Hidden" Source="SideBarPage.xaml" />
-        <Border Grid.Column="1" Style="{StaticResource CustomBorder}" />
-        <Border Grid.Column="2" Style="{StaticResource CustomBorder}" />
+        <Border Grid.Column="0" Style="{StaticResource CustomBorder}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="200" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel>
+                    <TextBlock
+                        Margin="10"
+                        FontSize="25"
+                        FontWeight="DemiBold"
+                        Text="Sotuv #" />
 
+                    <Grid Margin="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="72" />
+                            <ColumnDefinition Width="72" />
+                        </Grid.ColumnDefinitions>
+                        <Border Background="#F6F6F6" CornerRadius="10">
+                            <Grid>
+                                <StackPanel Orientation="Horizontal">
+                                    <md:PackIcon
+                                        Width="20"
+                                        Height="20"
+                                        Margin="10"
+                                        VerticalAlignment="Center"
+                                        Kind="Search" />
+                                    <TextBox
+                                        Height="48"
+                                        Padding="5"
+                                        VerticalContentAlignment="Center"
+                                        md:HintAssist.Hint="Mahsulot nomi, barkod yoki SKU"
+                                        BorderThickness="0"
+                                        FontSize="12"
+                                        FontWeight="DemiBold"
+                                        Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                                </StackPanel>
+                                <Button
+                                    Width="29"
+                                    Height="22"
+                                    Margin="10"
+                                    Padding="0"
+                                    HorizontalAlignment="Right"
+                                    md:ButtonAssist.CornerRadius="10"
+                                    Background="White"
+                                    BorderBrush="#E9E9E9"
+                                    Content="/"
+                                    FontSize="10"
+                                    FontWeight="DemiBold"
+                                    Foreground="Black"
+                                    Style="{StaticResource MaterialDesignRaisedButton}" />
+                            </Grid>
+                        </Border>
+                        <Button
+                            Grid.Column="1"
+                            Width="48"
+                            Height="48"
+                            Padding="0"
+                            HorizontalAlignment="Right"
+                            md:ButtonAssist.CornerRadius="10"
+                            md:ElevationAssist.Elevation="Dp0"
+                            Background="#F6F6F6"
+                            BorderThickness="0">
+                            <Image
+                                Width="24"
+                                Height="24"
+                                Source="/Icons/box.png" />
+                        </Button>
+                        <Button
+                            Grid.Column="2"
+                            Width="48"
+                            Height="48"
+                            Padding="0"
+                            HorizontalAlignment="Center"
+                            md:ButtonAssist.CornerRadius="10"
+                            md:ElevationAssist.Elevation="Dp0"
+                            Background="#F6F6F6"
+                            BorderThickness="0">
+                            <Image
+                                Width="24"
+                                Height="24"
+                                Source="/Icons/frame.png" />
+                        </Button>
+                    </Grid>
+                    <ScrollViewer
+                        x:Name="TabsViewer"
+                        Height="42"
+                        Margin="10,0"
+                        HorizontalScrollBarVisibility="Disabled"
+                        VerticalScrollBarVisibility="Disabled" />
+                    <Border Height="30" Margin="10,0">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="#9DA4B1"
+                                Text="Soni" />
+                            <TextBlock
+                                Grid.Column="1"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="#9DA4B1"
+                                Text="Nomi" />
+                            <TextBlock
+                                Grid.Column="2"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="#9DA4B1"
+                                Text="Narxi" />
+                            <TextBlock
+                                Grid.Column="3"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="#9DA4B1"
+                                Text="Umumiy narxi" />
+                        </Grid>
+                    </Border>
+                </StackPanel>
+                <StackPanel Grid.Row="1" VerticalAlignment="Center">
+                    <Image
+                        Width="98"
+                        Height="98"
+                        Source="/Icons/emptybasket.png" />
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="15"
+                        FontWeight="DemiBold"
+                        Text="Savat b'osh" />
+                </StackPanel>
+
+            </Grid>
+        </Border>
+        <Border Grid.Column="2" Style="{StaticResource CustomBorder}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="205" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel Margin="10" VerticalAlignment="Top">
+                    <Border Background="#F6F6F6" CornerRadius="10">
+                        <Grid>
+                            <StackPanel Orientation="Horizontal">
+                                <md:PackIcon
+                                    Width="20"
+                                    Height="20"
+                                    Margin="10"
+                                    VerticalAlignment="Center"
+                                    Kind="Search" />
+                                <TextBox
+                                    Height="48"
+                                    Padding="5"
+                                    VerticalContentAlignment="Center"
+                                    md:HintAssist.Hint="Mijoz ismi yoki telefon raqami"
+                                    BorderThickness="0"
+                                    FontSize="12"
+                                    FontWeight="DemiBold"
+                                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                            </StackPanel>
+                            <Button
+                                Width="29"
+                                Height="22"
+                                Margin="10"
+                                Padding="0"
+                                HorizontalAlignment="Right"
+                                md:ButtonAssist.CornerRadius="10"
+                                Background="White"
+                                BorderBrush="#E9E9E9"
+                                Content="c"
+                                FontSize="10"
+                                FontWeight="DemiBold"
+                                Foreground="Black"
+                                Style="{StaticResource MaterialDesignRaisedButton}" />
+                        </Grid>
+                    </Border>
+                    <Grid Margin="0,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Border
+                            Height="70"
+                            Margin="5"
+                            Background="#F5F5F5"
+                            CornerRadius="10">
+                            <StackPanel Margin="5">
+                                <TextBlock
+                                    FontWeight="DemiBold"
+                                    Opacity="0.5"
+                                    Text="Umumiy" />
+                                <TextBlock
+                                    x:Name="TotalPrice"
+                                    FontSize="25"
+                                    FontWeight="DemiBold" />
+                            </StackPanel>
+                        </Border>
+                        <Border
+                            Grid.Column="2"
+                            Height="70"
+                            Margin="5"
+                            Background="#F5F5F5"
+                            CornerRadius="10">
+                            <StackPanel Margin="5">
+                                <TextBlock
+                                    FontWeight="DemiBold"
+                                    Opacity="0.5"
+                                    Text="To'lovga" />
+                                <TextBlock
+                                    x:Name="PriceToPay"
+                                    FontSize="20"
+                                    FontWeight="DemiBold" />
+                            </StackPanel>
+                        </Border>
+                    </Grid>
+                    <ScrollViewer
+                        x:Name="PaymentMethodsViewer"
+                        Height="42"
+                        Margin="5,0"
+                        HorizontalScrollBarVisibility="Disabled"
+                        VerticalScrollBarVisibility="Disabled" />
+                </StackPanel>
+
+                <Border
+                    Grid.Row="1"
+                    Height="112"
+                    Margin="10"
+                    VerticalAlignment="Bottom"
+                    Background="#F5F5F5"
+                    CornerRadius="30">
+                    <Grid>
+                        <StackPanel
+                            Margin="10,15"
+                            VerticalAlignment="Top"
+                            Orientation="Horizontal">
+                            <TextBlock
+                                Margin="5"
+                                VerticalAlignment="Center"
+                                FontWeight="DemiBold"
+                                Text="Jami chegirma" />
+                            <Button
+                                Width="29"
+                                Height="22"
+                                Padding="0"
+                                VerticalAlignment="Center"
+                                md:ButtonAssist.CornerRadius="10"
+                                Background="White"
+                                BorderBrush="#E9E9E9"
+                                Content="D"
+                                FontSize="10"
+                                FontWeight="DemiBold"
+                                Foreground="Black"
+                                Style="{StaticResource MaterialDesignRaisedButton}" />
+                        </StackPanel>
+                        <Button
+                            Width="30"
+                            Height="30"
+                            Margin="10,15"
+                            Padding="0"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            VerticalContentAlignment="Center"
+                            md:ButtonAssist.CornerRadius="15"
+                            Background="White"
+                            BorderThickness="0"
+                            FontSize="20"
+                            Foreground="Black"
+                            Style="{StaticResource MaterialDesignRaisedButton}">
+                            <md:PackIcon Kind="Plus" />
+                        </Button>
+
+                        <Border
+                            Height="56"
+                            VerticalAlignment="Bottom"
+                            Background="#D9D9D9"
+                            CornerRadius="30">
+                            <Grid>
+
+                                <StackPanel
+                                    Margin="10"
+                                    VerticalAlignment="Center"
+                                    Orientation="Horizontal">
+                                    <TextBlock
+                                        Margin="5"
+                                        VerticalAlignment="Center"
+                                        FontWeight="DemiBold"
+                                        Text="To'lash" />
+                                    <Button
+                                        Width="29"
+                                        Height="22"
+                                        Padding="0"
+                                        VerticalAlignment="Center"
+                                        md:ButtonAssist.CornerRadius="10"
+                                        Background="White"
+                                        BorderBrush="#E9E9E9"
+                                        Content="P"
+                                        FontSize="10"
+                                        FontWeight="DemiBold"
+                                        Foreground="Black"
+                                        Style="{StaticResource MaterialDesignRaisedButton}" />
+                                </StackPanel>
+                                <TextBlock
+                                    Margin="20,0"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center"
+                                    FontWeight="DemiBold"
+                                    Text="0 UZS" />
+                            </Grid>
+                        </Border>
+                    </Grid>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 </Page>
