--- a/BitoDesktop.WPF/Pages/PosPage.xaml
+++ b/BitoDesktop.WPF/Pages/PosPage.xaml
@@ -2,6 +2,7 @@
     x:Class="BitoDesktop.WPF.Pages.PosPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:bp="clr-namespace:BitoDesktop.WPF.Controllers.PosControllers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BitoDesktop.WPF.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,6 +10,7 @@
     Title="PosPage"
     MinWidth="800"
     MinHeight="450"
+    Loaded="Page_Loaded"
     mc:Ignorable="d">
     <Page.Resources>
         <Style x:Key="CustomBorder" TargetType="Border">
@@ -26,7 +28,7 @@
         <Border Grid.Column="0" Style="{StaticResource CustomBorder}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="200" />
+                    <RowDefinition Height="210" />
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <StackPanel>
@@ -114,13 +116,14 @@
                         Margin="10,0"
                         HorizontalScrollBarVisibility="Disabled"
                         VerticalScrollBarVisibility="Disabled" />
-                    <Border Height="30" Margin="10,0">
+                    <Border Height="45" Margin="10,0">
                         <Grid>
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.5*" />
                                 <ColumnDefinition />
                                 <ColumnDefinition />
                                 <ColumnDefinition />
-                                <ColumnDefinition />
+                                <ColumnDefinition Width="0.4*" />
                             </Grid.ColumnDefinitions>
                             <TextBlock
                                 VerticalAlignment="Center"
@@ -145,21 +148,41 @@
                                 FontSize="15"
                                 Foreground="#9DA4B1"
                                 Text="Umumiy narxi" />
+                            <Button
+                                Grid.Column="4"
+                                Width="32"
+                                Height="32"
+                                Margin="5"
+                                Padding="0"
+                                md:ButtonAssist.CornerRadius="10"
+                                md:ElevationAssist.Elevation="Dp0"
+                                Background="#F5F5F5"
+                                BorderThickness="0"
+                                Style="{StaticResource MaterialDesignRaisedButton}">
+                                <md:PackIcon Foreground="#EC5B56" Kind="Delete" />
+                            </Button>
                         </Grid>
                     </Border>
                 </StackPanel>
                 <StackPanel Grid.Row="1" VerticalAlignment="Center">
                     <Image
+                        x:Name="EmptyBasketImg"
                         Width="98"
                         Height="98"
                         Source="/Icons/emptybasket.png" />
                     <TextBlock
+                        x:Name="EmptyBasketTxt"
                         HorizontalAlignment="Center"
                         FontSize="15"
                         FontWeight="DemiBold"
                         Text="Savat b'osh" />
                 </StackPanel>
-
+                <ScrollViewer
+                    Grid.Row="1"
+                    Margin="10,0"
+                    VerticalScrollBarVisibility="Disabled">
+                    <ItemsControl x:Name="BasketControl" />
+                </ScrollViewer>
             </Grid>
         </Border>
         <Border Grid.Column="2" Style="{StaticResource CustomBorder}">
