--- a/BitoDesktop.WPF/Pages/Settings/PrinterSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PrinterSettings.xaml
@@ -1,14 +1,80 @@
-﻿<Page x:Class="BitoDesktop.WPF.Pages.Settings.PrinterSettings"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:BitoDesktop.WPF.Pages.Settings"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PrinterSettings">
-
-    <Grid>
-        
-    </Grid>
+﻿<Page
+    x:Class="BitoDesktop.WPF.Pages.Settings.PrinterSettings"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:BitoDesktop.WPF.Pages.Settings"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    Title="PrinterSettings"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <Page.Resources>
+        <Style x:Key="CustomBorder" TargetType="Border">
+            <Setter Property="Background" Value="White" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="CornerRadius" Value="10" />
+        </Style>
+    </Page.Resources>
+    <Border Style="{StaticResource CustomBorder}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="110" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel>
+                <Button
+                    Width="140"
+                    Height="48"
+                    Margin="10"
+                    HorizontalAlignment="Right"
+                    md:ButtonAssist.CornerRadius="10"
+                    Background="#006AFF"
+                    Style="{StaticResource MaterialDesignRaisedButton}">
+                    <TextBlock Text="Qo'shish +" />
+                </Button>
+                <Border Height="30" Margin="10,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.3*" />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="#9DA4B1"
+                            Text="№" />
+                        <TextBlock
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="#9DA4B1"
+                            Text="Printer nomi" />
+                        <TextBlock
+                            Grid.Column="2"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="#9DA4B1"
+                            Text="O'lcham" />
+                        <TextBlock
+                            Grid.Column="3"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Foreground="#9DA4B1"
+                            Text="Turi" />
+                    </Grid>
+                </Border>
+            </StackPanel>
+            <ScrollViewer
+                Grid.Row="1"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Auto">
+                <ItemsControl />
+                
+            </ScrollViewer>
+        </Grid>
+    </Border>
 </Page>
