Settings pages added

--- a/BitoDesktop.WPF/Pages/Settings/ActiveDevicesSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/ActiveDevicesSettings.xaml
@@ -45,7 +45,9 @@
                         BorderThickness="10"
                         Content="Yakunlash" />
                 </Grid>
-                <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                <ScrollViewer 
+                    HorizontalScrollBarVisibility="Disabled" 
+                    VerticalScrollBarVisibility="Auto">
                     <ItemsControl />
                 </ScrollViewer>
             </StackPanel>
