--- a/BitoDesktop.WPF/Pages/Settings/PINkodSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PINkodSettings.xaml
@@ -30,6 +30,7 @@
                     VerticalAlignment="Center"
                     md:HintAssist.Hint="Еski PIN kod"
                     Background="#F5F5F5"
+                    md:TextFieldAssist.TextFieldCornerRadius="13"
                     BorderThickness="0"
                     FontSize="15"
                     FontWeight="DemiBold"
@@ -43,6 +44,7 @@
                     Background="#F5F5F5"
                     BorderThickness="0"
                     FontSize="15"
+                    md:TextFieldAssist.TextFieldCornerRadius="13"
                     FontWeight="DemiBold"
                     Style="{StaticResource MaterialDesignOutlinedPasswordBox}" />
                 <PasswordBox
@@ -52,6 +54,7 @@
                     VerticalAlignment="Center"
                     md:HintAssist.Hint="PIN kodni takrorlang"
                     Background="#F5F5F5"
+                    md:TextFieldAssist.TextFieldCornerRadius="13"
                     BorderThickness="0"
                     FontSize="15"
                     FontWeight="DemiBold"
