--- a/BitoDesktop.WPF/Pages/Settings/PrinterInfo.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/PrinterInfo.xaml
@@ -1,12 +1,12 @@
 ﻿<Page
-    x:Class="BitoDesktop.WPF.Pages.Settings.PrinterCreateSettings"
+    x:Class="BitoDesktop.WPF.Pages.Settings.PrinterInfo"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BitoDesktop.WPF.Pages.Settings"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-    Title="PrinterCreateSettings"
+    Title="PrinterInfo"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -57,6 +57,14 @@
                     md:ButtonAssist.CornerRadius="10"
                     Background="#006AFF"
                     Content="Test print +" />
+                <Button
+                    Width="140"
+                    Height="48"
+                    Margin="10,10,330,0"
+                    HorizontalAlignment="Right"
+                    md:ButtonAssist.CornerRadius="10"
+                    Background="#EC5B56"
+                    Content="O'chirish"/>
             </Grid>
             <TextBox
                 Width="320"
