--- a/BitoDesktop.WPF/Pages/Settings/ActiveDevicesSettings.xaml
+++ b/BitoDesktop.WPF/Pages/Settings/ActiveDevicesSettings.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:BitoDesktop.WPF.Pages.Settings"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
     Title="ActiveDevicesSettings"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -42,7 +43,8 @@
                         Width="100"
                         Height="32"
                         HorizontalAlignment="Right"
-                        BorderThickness="10"
+                        md:ButtonAssist.CornerRadius="10"
+                        Background="Red"
                         Content="Yakunlash" />
                 </Grid>
                 <ScrollViewer 
